# wagoo

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs
src/: dynamics.rs  main.rs  model.rs  post.rs  post.wgsl  quad.rs  rand_util.rs  sampler.rs  screenshot.rs  shader_no_light.wgsl  sphere.rs  tail_buffer.rs  tail_shader.wgsl  texture.rs  util.rs
