[package]
name = "wagoo"
version = "0.1.0"
authors = ["Dan Swain"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
bitflags = "1.2.1"
cgmath = "0.18"
chrono = "0.4.19"
env_logger = "0.8"
futures = "0.3"
image = "0.23"
log = "0.4"
rayon = "1.4"
rand = "0.8.4"
ringbuffer = "0.7.1"
tobj = "3.0"
wgpu = "0.8"
winit = "0.24"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
